tests/positive/InstanceImport/Main.juvix
module Main;

import M open;
import M open;

type Bool := true | false;

instance
boolI : T Bool := mkT λ {x := x};

main : Unit := T.pp unit;
